  MYSQLI_TYPE_NEWDECIMAL and MYSQLI_TYPE_BIT. FR #36007. (Georg)
- Added ReflectionClass::newInstanceArgs($args). (Marcus)
- Added imap_savebody(). (Mike)
- Fixed imagecolorallocate() and imagecolorallocatelapha() to return FALSE
  on error. (Pierre)
- Fixed bug #36235 (ocicolumnname returns false before a succesfull fetch). 
  (Tony)
- Fixed bug #36222 (errorInfo in PDOException is always NULL). (Ilia)
- Fixed bug #36185 (str_rot13(NULL) crash). (Pierre)
- Fixed bug #36176 (PDO_PGSQL - PDO::exec() does not return number of rows 
  affected by the operation). (Ilia)
- Fixed bug #36152 (problems with curl+ssl and pgsql+ssl in same PHP). (Mike)
- Fixed bug #36148 (unpack("H*hex", $data) is adding an extra character to the 
  end of the string). (Ilia)
- Fixed bug #36134 (DirectoryIterator constructor failed to detect empty 
  directory names). (Ilia)
- Fixed bug #36113 (Reading records of unsupported type causes segfault). 
  (Tony)
- Fixed bug #36096 (oci_result() returns garbage after oci_fetch() failed). 
  (Tony)
- Fixed bug #36071 (Engine Crash related with 'clone'). (Dmitry)
- Fixed bug #36055 (possible OCI8 crash in multithreaded environment). (Tony)
- Fixed bug #36046 (parse_ini_file() miscounts lines in multi-line values).
  (Ilia)
- Fixed bug #36038 (ext/hash compile failure on Mac OSX). (Tony)
- Fixed bug #36037 (heredoc adds extra line number). (Dmitry)
- Fixed bug #36016 (realpath cache memleaks). (Dmitry, Nuno)
- Fixed bug #36011 (Strict errormsg wrong for call_user_func() and the likes).
  (Marcus)
- Fixed bug #36006 (Problem with $this in __destruct()). (Dmitry)
- Fixed bug #35999 (recursive mkdir() does not work with relative path
  like "foo/bar"). (Tony)
- Fixed bug #35998 (SplFileInfo::getPathname() returns unix style filenames
  in win32). (Marcus)
- Fixed bug #35954 (Fatal com_exception casting object). (Rob)

12 Jan 2006, PHP 5.1.2
- Updated libsqlite in ext/sqlite to 2.8.17. (Ilia)
- Updated libsqlite in ext/pdo_sqlite to 3.2.8. (Ilia)