@@ -20,6 +20,8 @@ PHP                                                                        NEWS
   on error. (Pierre)
 - Fixed bug #36235 (ocicolumnname returns false before a succesfull fetch). 
   (Tony)
+- Fixed bug #36224 (date(DATE_ATOM) gives wrong results). (Derick, Hannes
+  Magnusson)
 - Fixed bug #36222 (errorInfo in PDOException is always NULL). (Ilia)
 - Fixed bug #36185 (str_rot13(NULL) crash). (Pierre)
 - Fixed bug #36176 (PDO_PGSQL - PDO::exec() does not return number of rows 
